cmake_minimum_required(VERSION 3.10)

# Set the project name and specify C++ standard
project(YourProjectName)

# Specify the C++ standard explicitly
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add an executable
add_executable(YourExecutableName main.cpp)
cmake_minimum_required(VERSION 3.10)

# Set the project name
project(YourProjectName)

# Add an executable
add_executable(your_executable_name main.cpp)
